--- a/blocks/section-title/section-title.css
+++ b/blocks/section-title/section-title.css
@@ -1,7 +1,7 @@
 @import url(./_theme/section-title_theme_dark.css);
 
 .section-title {
-  line-height: 69px;
+  line-height: 69px; /* TODO Check if this is the same everywhere it is used */
   font-size: 60px;
   font-weight: bold;
   width: 60%;
