--- a/pages/index.css
+++ b/pages/index.css
@@ -9,3 +9,6 @@
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/section-title/section-title.css);
 @import url(../blocks/section-subtitle/section-subtitle.css);
+@import url(../blocks/rotation/rotation.css);
+@import url(../blocks/techniques/techniques.css);
+@import url(../blocks/cards/cards.css);
