--- a/blocks/section-title/section-title.css
+++ b/blocks/section-title/section-title.css
@@ -1,7 +1,7 @@
 @import url(./_theme/section-title_theme_dark.css);
 
 .section-title {
-  line-height: 69px; /* TODO Check if this is the same everywhere it is used */
+  line-height: 1.15; /* TODO Check if this is the same everywhere it is used */
   font-size: 60px;
   font-weight: bold;
   width: 60%;
@@ -10,4 +10,5 @@
   text-align: center;
   margin-bottom: 20px;
   margin-top: 100px;
+  position: relative;
 }
