--- a/blocks/section-title/section-title.css
+++ b/blocks/section-title/section-title.css
@@ -1,7 +1,5 @@
-@import url(./_theme/section-title_theme_dark.css);
-
 .section-title {
-  line-height: 1.15; /* TODO Check if this is the same everywhere it is used */
+  line-height: 1.15;
   font-size: 60px;
   font-weight: bold;
   width: 60%;
@@ -12,3 +10,4 @@
   margin-top: 100px;
   position: relative;
 }
+
