--- a/pages/index.css
+++ b/pages/index.css
@@ -4,11 +4,14 @@
 @import url(../blocks/two-columns/two-columns.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/table/table.css);
+@import url(../blocks/table/_theme/table_theme_dark.css);
 @import url(../blocks/feynman/feynman.css);
 @import url(../blocks/kaufman/kaufman.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/section-title/section-title.css);
+@import url(../blocks/section-title/_theme/section-title_theme_dark.css);
 @import url(../blocks/section-subtitle/section-subtitle.css);
+@import url(../blocks/section-subtitle/_theme/section-subtitle_theme_dark.css);
 @import url(../blocks/rotation/rotation.css);
 @import url(../blocks/techniques/techniques.css);
 @import url(../blocks/cards/cards.css);
