--- a/blocks/footer/__column-link/footer__column-link.css
+++ b/blocks/footer/__column-link/footer__column-link.css
@@ -2,4 +2,9 @@
   text-decoration: none;
   color: #808080;
   margin-left: 0;
+  transition: opacity 1s ease-in-out;
+}
+
+.footer__column-link:hover {
+  opacity: 0.5;
 }
