--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -1,4 +1,9 @@
 .header__link {
   text-decoration: none;
   color: #2F80ED;
+  transition: opacity 1s ease-in-out;
+}
+
+.header__link:hover {
+  opacity: 0.5;
 }
