--- a/blocks/khan/__buy-link/khan__buy-link.css
+++ b/blocks/khan/__buy-link/khan__buy-link.css
@@ -5,4 +5,13 @@
   font-weight: normal;
   text-decoration: none;
   color: #2F80ED;
+  transition: opacity 1s ease-in-out;
 }
+
+.khan__buy-link:hover {
+  opacity: 0.5;
+}
+
+
+
+
