--- a/blocks/resources/__logo-zone/resources__logo-zone.css
+++ b/blocks/resources/__logo-zone/resources__logo-zone.css
@@ -1,5 +1,6 @@
-.rescources__logo-zone {
+.resources__logo-zone {
   margin: 80px auto 217px auto;
+  padding-left: 0;
   width: 1100px;
   display: flex;
   list-style: none;
