--- a/blocks/khan/__book-pic/khan__book-pic.css
+++ b/blocks/khan/__book-pic/khan__book-pic.css
@@ -2,6 +2,6 @@
   margin: 0 20px 0 0;
   width: 620px;
   height: 608px;
-  background-image: url(../../../images/book.png);
-  background-size: cover;
+  object-fit: cover;
+  object-position: 0 0;
 }
